--- a/web-app/css/terrafirma.css
+++ b/web-app/css/terrafirma.css
@@ -582,3 +582,7 @@ th.desc a {
     background: transparent url(../images/skin/database_save.png) 5px 50% no-repeat;
     padding-left: 28px;
 }
+.buttons input.home {
+    background: transparent url(../images/skin/house.png) 5px 50% no-repeat;
+    padding-left: 28px;
+}
