--- a/web-app/css/terrafirma.css
+++ b/web-app/css/terrafirma.css
@@ -5,6 +5,10 @@
 
 */
 
+
+/*.transparent-box {background:#fff; border:1px solid #d0cfcf; padding:20px; -moz-border-radius:10px; -webkit-border-radius:10px;}
+*/
+
 *
 {
 padding: 0px;
@@ -447,8 +451,9 @@ td.errors input {
 /* TABLES */
 
 table {
-    border: 1px solid #ccc;
+    
     width: 100%
+	background:#fff; border:1px solid #d0cfcf; padding:20px; -moz-border-radius:10px; -webkit-border-radius:10px;
 }
 tr {
     border: 0;
@@ -586,3 +591,44 @@ th.desc a {
     background: transparent url(../images/skin/house.png) 5px 50% no-repeat;
     padding-left: 28px;
 }
+
+
+.box {background:#E5ECF3 none repeat scroll 0% 0%; border:4px solid #d3d3d3; padding:18px; -moz-border-radius:10px; -webkit-border-radius:10px;}
+
+
+
+
+
+/* FORMS except IE
+   ------------------------------------------------------------------------------------------------------------------------------------------- */
+        textarea, input[type='text'], input[type='password'] {
+            border: 1px solid #ccc;
+            background: #fff;
+            font-size: 16px;            
+        }
+		
+		input[type='text'], input[type='password'] {
+            height: 28px;
+			padding: 4px;            
+        }					
+
+        select {
+            border: 1px solid #ccc;
+            background: #fff;
+            font-size: 13px;
+        }
+
+        textarea:hover, input[type='text']:hover, input[type='password']:hover, select:hover {
+            border-color: #aaa;
+        }
+
+        textarea:focus, input[type='text']:focus, input[type='password']:focus, select:focus {
+            border-color: #eac117;
+            background: #fffedc
+        }
+
+        input[type='button'], input[type='submit'], input[type='checkbox'], input[type='image'], input[type='radio'], input[type='reset'], select, button {
+            cursor: pointer;
+        }
+
+label {font-weight:bold;}
