--- a/web-app/css/terrafirma.css
+++ b/web-app/css/terrafirma.css
@@ -5,18 +5,12 @@
 
 */
 
-
-/*.transparent-box {background:#fff; border:1px solid #d0cfcf; padding:20px; -moz-border-radius:10px; -webkit-border-radius:10px;}
-*/
-
-*
-{
+* {
 padding: 0px;
 margin: 0px;
 }
 
-body
-{
+body {
 background: #F9F9F7 url('../images/a1.gif') repeat-x;
 font-size: 11px;
 font-family: "trebuchet ms", helvetica, sans-serif;
@@ -24,31 +18,26 @@ color: #8C8C73;
 line-height: 18px;
 }
 
-a
-{
+a {
 color: #FF7800;
 text-decoration: underline;
 }
 
-a:hover
-{
+a:hover {
 text-decoration: none;
 }
 
-sup
-{
+sup {
 font-size: 0.5em;
 }
 
 
-p
-{
+p {
 margin-bottom: 14px;
 text-align: justify;
 }
 
-img.picA
-{
+img.picA {
 position: relative;
 top: -2px;
 background: url('../images/a47.gif') no-repeat;
@@ -57,8 +46,7 @@ height: 74px;
 padding: 8px;
 }
 
-img.picB
-{
+img.picB {
 position: relative;
 top: -2px;
 background: url('../images/a26.gif') no-repeat;
@@ -67,34 +55,29 @@ height: 75px;
 padding: 7px;
 }
 
-img.floatleft
-{
+img.floatleft {
 float: left;
 margin: 0px 14px 3px 0px;
 }
 
 
-ul.linklist
-{
+ul.linklist {
 list-style: none;
 }
 
-ul.linklist li
-{
+ul.linklist li {
 border-top: solid 1px #EEEEEE;
 padding-top: 5px;
 margin: 5px 0px 0px 0px;
 }
 
-ul.linklist li.first
-{
+ul.linklist li.first {
 border-top: 0px;
 margin-top: 0px;
 padding-top: 0px;
 }
 
-#upbg
-{
+#upbg {
 position: absolute;
 top: 0px;
 left: 0px;
@@ -104,23 +87,20 @@ height: 264px;
 z-index: 1;
 }
 
-#outer
-{
+#outer {
 position: relative;
 width: 747px;
 margin: 0 auto;
 background: #fff url('../images/abg.gif') repeat-y;
 }
 
-#inner
-{
+#inner {
 position: relative;
 padding: 13px 30px 13px 30px;
 z-index: 2;
 }
 
-#header
-{
+#header {
 position: absolute;
 background: #FF7800 url('../images/a8.gif') repeat-x;
 width: 202px;
@@ -129,13 +109,11 @@ color: #fff;
 padding-left: 20px;
 }
 
-#header span
-{
+#header span {
 font-weight: normal;
 }
 
-#header h1
-{
+#header h1 {
 position: absolute;
 font-size: 23px;
 letter-spacing: -1px;
@@ -143,8 +121,7 @@ top: 30px;
 height: 92px;
 }
 
-#header h2
-{
+#header h2 {
 position: absolute;
 font-size: 10px;
 font-weight: normal;
@@ -152,13 +129,11 @@ color: #FCE2CA;
 top: 51px;
 }
 
-#header sup
-{
+#header sup {
 color: #FCE2CA;
 }
 
-#splash
-{
+#splash {
 position: absolute;
 right: 30px;
 background: #EAEAE2 url('../images/a10.jpg') no-repeat;
@@ -166,8 +141,7 @@ width: 458px;
 height: 92px;
 }
 
-#menu
-{
+#menu {
 position: relative;
 background: #46461F url('../images/a16.gif') repeat-x;
 height: 67px;
@@ -175,24 +149,20 @@ padding: 0px 20px 0px 5px;
 margin: 98px 0px 20px 0px;
 }
 
-#menu ul
-{
+#menu ul {
 }
 
-#menu ul li
-{
+#menu ul li {
 display: inline;
 line-height: 52px;
 padding-left: 3px;
 }
 
-#menu ul li.first
-{
+#menu ul li.first {
 border-left: 0px;
 }
 
-#menu ul li a
-{
+#menu ul li a {
 background-color: transparent;
 background-repeat: repeat-x;
 padding: 8px 12px 8px 12px;
@@ -201,15 +171,13 @@ color: #fff;
 font-weight: bold;
 }
 
-#menu ul li a:hover
-{
+#menu ul li a:hover {
 background: #fff url('../images/a18.gif') repeat-x top;
 color: #4A4A24;
 text-decoration: none;
 }
 
-#date
-{
+#date {
 position: absolute;
 top: 0px;
 line-height: 52px;
@@ -220,15 +188,13 @@ font-size: 12px;
 letter-spacing: -1px;
 }
 
-#secondarycontent
-{
+#secondarycontent {
 position: relative;
 width: 180px;
 float: right;
 }
 
-#secondarycontent h3
-{
+#secondarycontent h3 {
 position: relative;
 top: 4px;
 font-size: 16px;
@@ -240,21 +206,18 @@ padding: 0px 0px 10px 10px;
 margin-bottom: 20px;
 }
 
-#secondarycontent .content
-{
+#secondarycontent .content {
 padding: 0px 10px 0px 10px;
 margin-bottom: 20px;
 }
 
-#primarycontent
-{
+#primarycontent {
 position: relative;
 width: 480px;
 float: left;
 }
 
-#primarycontent h3
-{
+#primarycontent h3 {
 position: relative;
 top: 4px;
 font-size: 18px;
@@ -266,24 +229,20 @@ padding: 0px 0px 10px 15px;
 margin-bottom: 20px;
 }
 
-#primarycontent .content
-{
+#primarycontent .content {
 padding: 0px 15px 0px 15px;
 margin-bottom: 20px;
 }
 
-#primarycontent .post
-{
+#primarycontent .post {
 margin-bottom: 30px;
 }
 
-#primarycontent .post .header
-{
+#primarycontent .post .header {
 position: relative;
 }
 
-#primarycontent .post .date
-{
+#primarycontent .post .date {
 position: absolute;
 right: 15px;
 top: 0px;
@@ -292,29 +251,25 @@ color: #AFAFA4;
 font-weight: bold;
 }
 
-#primarycontent .post .content
-{
+#primarycontent .post .content {
 margin-bottom: 0px;
 }
 
-#primarycontent .post .footer
-{
+#primarycontent .post .footer {
 position: relative;
 top: -10px;
 background: url('../images/a33.gif') repeat-x;
 height: 64px;
 }
 
-#primarycontent .post .footer ul
-{
+#primarycontent .post .footer ul {
 list-style: none;
 position: absolute;
 right: 15px;
 bottom: 15px;
 }
 
-#primarycontent .post .footer ul li
-{
+#primarycontent .post .footer ul li {
 display: inline;
 line-height: 14px;
 padding-left: 17px;
@@ -323,23 +278,19 @@ background-repeat: no-repeat;
 background-position: 0px 2px;
 }
 
-#primarycontent .post .footer ul li.printerfriendly
-{
+#primarycontent .post .footer ul li.printerfriendly {
 background-image: url('../images/a41.gif');
 }
 
-#primarycontent .post .footer ul li.comments
-{
+#primarycontent .post .footer ul li.comments {
 background-image: url('../images/a36.gif');
 }
 
-#primarycontent .post .footer ul li.readmore
-{
+#primarycontent .post .footer ul li.readmore {
 background-image: url('../images/a38.gif');
 }
 
-#footer
-{
+#footer {
 position: relative;
 clear: both;
 height: 66px;
@@ -349,8 +300,7 @@ background-image: url('../images/a50.gif');
 color: #A8A88D;
 }
 
-#footer a
-{
+#footer a {
 color: #8C8C73;
 }
 /*************************************************************************************/
