--- a/web-app/css/terrafirma.css
+++ b/web-app/css/terrafirma.css
@@ -523,7 +523,7 @@ th.desc a {
 }
 
 
-.box {background:#E5ECF3 none repeat scroll 0% 0%; border:4px solid #d3d3d3; padding:18px; -moz-border-radius:10px; -webkit-border-radius:10px;}
+.box {background:#E4ED90 none repeat scroll 0% 0%; border:4px solid #9FAF4C; padding:18px; -moz-border-radius:10px; -webkit-border-radius:10px;}
 
 /* FORMS */
    fieldset {padding:0 1em 1em 1em; margin:1.6em 0;} /* padding-top is margin-top for fieldsets in Opera */
@@ -543,11 +543,11 @@ th.desc a {
         textarea, input[type='text'], input[type='password'] {
             border: 1px solid #ccc;
             background: #fff;
-            font-size: 16px;            
+            font-size: 10px;            
         }
 		
 		input[type='text'], input[type='password'] {
-            height: 28px;
+            height: 22px;
 			padding: 4px;            
         }					
 
